// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog /> Default story renders snapshot 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1stcx4t-MuiButtonBase-root-MuiButton-root"
  tabindex="0"
  type="button"
>
  Open 
  m
  <span
    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 1`] = `
<h2
  class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-uq0kkp-MuiTypography-root-MuiDialogTitle-root"
  data-testid="dialog-title"
  id=":r1:"
>
  <button
    aria-label="Close"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1248kqk-MuiButtonBase-root-MuiIconButton-root"
    icon="XMark"
    tabindex="0"
    type="button"
  >
    <div
      class="css-1ft6wgl"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
        data-file-name="IconXMarkSmall"
        data-testid="IconXMarkSmall"
        fillcontrast="white"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      />
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <p
    class="MuiTypography-root MuiTypography-body1 css-lr0kx2-MuiTypography-root"
  >
    Optional Overline
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 css-1s4wytx-MuiTypography-root"
  >
    Title
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 css-mqftut-MuiTypography-root"
  >
    Optional Subtitle
  </p>
</h2>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 2`] = `
<div
  class="MuiDialogContent-root css-loe64q-MuiDialogContent-root"
  data-testid="dialog-content"
>
  Content Module
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 3`] = `
<div
  class="MuiDialogActions-root MuiDialogActions-spacing css-3tqi0u-MuiDialogActions-root"
  data-testid="dialog-actions"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1h6y04q-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Secondary Action
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-is566c-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Primary Action
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 4`] = `
<h2
  class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-uq0kkp-MuiTypography-root-MuiDialogTitle-root"
  data-testid="dialog-title"
  id=":r2:"
>
  <button
    aria-label="Close"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-113gqae-MuiButtonBase-root-MuiIconButton-root"
    icon="XMark"
    tabindex="0"
    type="button"
  >
    <div
      class="css-1ft6wgl"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
        data-file-name="IconXMarkLarge"
        data-testid="IconXMarkLarge"
        fillcontrast="white"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      />
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <p
    class="MuiTypography-root MuiTypography-body1 css-lr0kx2-MuiTypography-root"
  >
    Optional Overline
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 css-1s4wytx-MuiTypography-root"
  >
    Title
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 css-mqftut-MuiTypography-root"
  >
    Optional Subtitle
  </p>
</h2>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 5`] = `
<div
  class="MuiDialogContent-root css-loe64q-MuiDialogContent-root"
  data-testid="dialog-content"
>
  Content Module
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 6`] = `
<div
  class="MuiDialogActions-root MuiDialogActions-spacing css-3tqi0u-MuiDialogActions-root"
  data-testid="dialog-actions"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1h6y04q-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Secondary Action
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-is566c-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Primary Action
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 7`] = `
<h2
  class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-uq0kkp-MuiTypography-root-MuiDialogTitle-root"
  data-testid="dialog-title"
  id=":r3:"
>
  <button
    aria-label="Close"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1hk74hd-MuiButtonBase-root-MuiIconButton-root"
    icon="XMark"
    tabindex="0"
    type="button"
  >
    <div
      class="css-1ft6wgl"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
        data-file-name="IconXMarkLarge"
        data-testid="IconXMarkLarge"
        fillcontrast="white"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      />
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <p
    class="MuiTypography-root MuiTypography-body1 css-lr0kx2-MuiTypography-root"
  >
    Optional Overline
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 css-1s4wytx-MuiTypography-root"
  >
    Title
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 css-mqftut-MuiTypography-root"
  >
    Optional Subtitle
  </p>
</h2>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 8`] = `
<div
  class="MuiDialogContent-root css-loe64q-MuiDialogContent-root"
  data-testid="dialog-content"
>
  Content Module
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 9`] = `
<div
  class="MuiDialogActions-root MuiDialogActions-spacing css-3tqi0u-MuiDialogActions-root"
  data-testid="dialog-actions"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1h6y04q-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Secondary Action
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-is566c-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Primary Action
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 10`] = `
<h2
  class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-uq0kkp-MuiTypography-root-MuiDialogTitle-root"
  data-testid="dialog-title"
  id=":r4:"
>
  <button
    aria-label="Close"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1hk74hd-MuiButtonBase-root-MuiIconButton-root"
    icon="XMark"
    tabindex="0"
    type="button"
  >
    <div
      class="css-1ft6wgl"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
        data-file-name="IconXMarkLarge"
        data-testid="IconXMarkLarge"
        fillcontrast="white"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      />
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <p
    class="MuiTypography-root MuiTypography-body1 css-lr0kx2-MuiTypography-root"
  >
    Optional Overline
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 css-1s4wytx-MuiTypography-root"
  >
    Title
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 css-mqftut-MuiTypography-root"
  >
    Optional Subtitle
  </p>
</h2>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 11`] = `
<div
  class="MuiDialogContent-root css-loe64q-MuiDialogContent-root"
  data-testid="dialog-content"
>
  Content Module
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 12`] = `
<div
  class="MuiDialogActions-root MuiDialogActions-spacing css-3tqi0u-MuiDialogActions-root"
  data-testid="dialog-actions"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1h6y04q-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Secondary Action
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-is566c-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Primary Action
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<Dialog /> renders Dialog left positioned buttons 1`] = `
<div
  class="MuiDialogActions-root MuiDialogActions-spacing css-1naj6t2-MuiDialogActions-root"
  data-testid="dialog-actions"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-is566c-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Primary Action
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1h6y04q-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Secondary Action
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<Dialog /> renders Dialog without title X button 1`] = `
<h2
  class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-uq0kkp-MuiTypography-root-MuiDialogTitle-root"
  data-testid="dialog-title"
  id=":r5:"
>
  <p
    class="MuiTypography-root MuiTypography-body1 css-lr0kx2-MuiTypography-root"
  >
    Optional Overline
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 css-1s4wytx-MuiTypography-root"
  >
    Title
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 css-mqftut-MuiTypography-root"
  >
    Optional Subtitle
  </p>
</h2>
`;
